apps/ingress-redirect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redirect-nginx-to-traefik
  labels:
    name: ingress-redirect-nginx-to-traefik
spec:
  ingressClassName: nginx
  rules:
  - host: demo-unnomprofesionnel.playground.padok.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: traefik
            port: 
              number: 80
